# quant

./: .gitignore  .pre-commit-config.yaml  cargo.toml  main.py  pyproject.toml
.cursor/rules/: use-uv-always.mdc
crates/core/: Cargo.toml
doc/: momentum-strategy-enhancement.md  numpy-quantitative-analysis.md  pandas_demo_part4.md
quant/: main.py  means_demo.py
quant/intro/: __init__.py  backtest.py  basic-stg.py  data_loader.py  factors.py  quiz-tsla.py  strategy.py  visualization.py
quant/numpys/: usecase.py
quant/pandas_demo/: part4_demo.py
