[project]
name = "quant-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "datetime>=5.5",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "ruff>=0.12.4",
    "scipy>=1.16.0",
    "watchfiles>=1.1.0",
    "yfinance>=0.2.65",
]
