[project]
name = "quant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "datetime>=5.5",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "ruff>=0.12.4",
    "scipy>=1.16.0",
    "watchfiles>=1.1.0",
    "yfinance>=0.2.65",
    "uvloop>=0.21.0,<1.0.0; sys_platform != \"win32\"",
]

[tool.setuptools.packages.find]
include = ["quant*"]
exclude = [
    "crates*",
    "target*",
    "charts*",
    "test_backtest*",
    "backtest_results*",
]

[build-system]
requires = ["setuptools>=80", "poetry-core>=2.0.1"]
build-backend = "poetry.core.masonry.api"
